fix: move top half of card down to align button to stats area

--- a/styles.css
+++ b/styles.css
@@ -277,5 +277,5 @@ main {
 }
 
 #container {
-    transform: translateY(10px);
+    transform: translateY(22px);
 }
